# primecount

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  CMakeSettings.json  COPYING  ChangeLog  HACKING.md  Makefile  Makefile.am  Makefile.msvc  README  README.md  RELEASE.md  THANKS  TODO  appveyor.yml  autogen.sh  avoid_128bit_div.patch  build.sh  configure.ac  fast_div.patch  find_fastest_alpha.sh  index.html  install_primesieve.sh  params.json  primecount.exe.stackdump  primecount.pc.in  primecount_worktodo.sh
.github/: FUNDING.yml
.github/workflows/: benchmark.yml  build_windows_binaries.yml  build_windows_release_binaries.ci  ci-sage.yml  ci.yml
cmake/: Apple_ARM64.cmake  OpenMP.cmake  OpenMP_kmp_set_defaults.cmake  compiler_supports_cpp11.cmake  double_integer_division.cmake  float128.cmake  int128_t.cmake  libdivide.cmake  multiarch_arm_sve.cmake  multiarch_avx512_vpopcnt.cmake  multiarch_x86_popcnt.cmake  popcnt.cmake  primecountConfig.cmake.in  setenv.cmake  x86_cpuid.cmake
doc/: BUILD.md  Credits.md  Easy-Special-Leaves.md  Hard-Special-Leaves.md  Partial-Sieve-Function.md  README.md  RELEASE.md  Records.md  References.md  Special-Leaves.md  alpha-factor-dr.nb  alpha-factor-gourdon.nb  alpha-factor-lmo.nb  alpha-tuning-factor.nb  libprimecount.md  primecount-MPI.md  primecount.1  primecount.txt
docs/: computing-special-leaves.md  finding-special-leaves.md
formulas/: RiemannR-1.svgz
include/: AbstractFactorTable.hpp  BaseFactorTable.hpp  BinaryIndexedTree.hpp  BitSieve.hpp  BitSieve128.hpp  BitSieve240.hpp  CPUID.hpp  CPUID_AVX512_BMI2.hpp  CPUID_POPCNT.hpp  CpuID.hpp  DFactorTable.hpp  FactorTable.hpp  FactorTableD.hpp  LibdividePrimes.hpp  LoadBalancer.hpp  LoadBalancerAC.hpp  LoadBalancerP2.hpp  LoadBalancerS2.hpp  ModuloWheel.hpp  MpiLoadBalancer.hpp  MpiMsg.hpp  OmpLock.hpp  PhiCache.hpp  PhiTiny.hpp  PiTable.hpp  RelaxedAtomic.hpp  S.hpp  S1.hpp  S2.hpp  S2LoadBalancer.hpp  S2Status.hpp  S2_hard_mpi_LoadBalancer.hpp  S2_hard_mpi_msg.hpp  SegmentedPiTable.hpp  Sieve.hpp  SieveEndianness.hpp  SieveTables.hpp  Status.hpp  StatusAC.hpp  StatusS2.hpp  (+56 more)
lib/primesieve/: CMakeLists.txt  ChangeLog  primesieve.pc
m4/: m4-ax_cxx_compile_stdcxx_11.m4  m4-ax_popcnt.m4
scripts/: Li_accuracy.sh  RiemannR_accuracy.sh  benchmark-vs-prev-release.sh  build.sh  build_clang_multiarch_win_x64.bat  build_mingw64.sh  build_mingw64_arm64.sh  build_mingw64_x64.sh  cache_line_size.sh  find_fastest_alpha.sh  find_fastest_alpha_dr.sh  find_fastest_alpha_gourdon.sh  find_fastest_alpha_lmo.sh  find_fastest_alpha_y_gourdon.sh  find_fastest_alpha_z_gourdon.sh  find_optimal_alpha_dr.sh  find_optimal_alpha_gourdon.sh  find_optimal_alpha_lmo.sh  find_optimal_alpha_y.sh  gen_tests_dr.sh  gen_tests_gourdon1.sh  gen_tests_gourdon2.sh  gen_tests_s1.sh  generate_html_benchmarks.sh  kill_resume.sh  resume.sh  status-curve-fitting.cpp  status_curve_fitting.cpp  update_libprimesieve.sh  update_version.sh  worktodo.sh
src/: BaseFactorTable.hpp  BitSieve-popcnt.cpp  BitSieve.cpp  BitSieve128.cpp  BitSieve240.cpp  BitSieve240.hpp  FactorTable.cpp  FactorTable.hpp  Li.cpp  LoadBalancer.cpp  LoadBalancerP2.cpp  LoadBalancerP2.hpp  LoadBalancerS2.cpp  LoadBalancerS2.hpp  LogarithmicIntegral.cpp  ModuloWheel.cpp  P2.cpp  P2.h  P3.cpp  P3.h  PhiCache.cpp  PhiCache.h  PhiCache.hpp  PhiTiny.cpp  PhiTiny.h  PhiTiny.hpp  PiTable.cpp  PiTable.hpp  Pk.cpp  Pk.h  Pk.hpp  PrimeSieveVector.h  RiemannPsiZeros.hpp  RiemannR.cpp  S1.cpp  S2LoadBalancer.cpp  S2Status.cpp  SegmentedPiTable.cpp  Sieve.cpp  Sieve.hpp  (+68 more)
src/128-bit/: test.cpp
src/Pk/: P2.cpp
src/Pkxa/: P2xa.cpp
src/app/: CmdOptions.cpp  CmdOptions.hpp  cmdoptions.cpp  cmdoptions.hpp  help.cpp  main.cpp  test.cpp
src/deleglise-rivat/: S2.hpp  S2_easy.cpp  S2_easy_libdivide.cpp  S2_hard.cpp  S2_hard_multiarch_arm_sve.cpp  S2_hard_multiarch_avx512.cpp  S2_sieve.cpp  S2_trivial.cpp  pi_deleglise_rivat.cpp  pi_deleglise_rivat1.cpp  pi_deleglise_rivat2.cpp  pi_deleglise_rivat3.cpp  pi_deleglise_rivat4.cpp  pi_deleglise_rivat_parallel.cpp  pi_deleglise_rivat_parallel1.cpp  pi_deleglise_rivat_parallel2.cpp  pi_deleglise_rivat_parallel3.cpp  pi_deleglise_rivat_parallel4.cpp
src/gourdon/: A.cpp  A1.cpp  A1_libdivide.cpp  A2.cpp  A2_libdivide.cpp  AC.cpp  AC_libdivide.cpp  A_libdivide.cpp  B.cpp  C.cpp  C1.cpp  C2.cpp  C3.cpp  C3_libdivide.cpp  C4.cpp  C4_libdivide.cpp  D.cpp  D1.cpp  D2.cpp  D3.cpp  D4.cpp  DFactorTable.hpp  DLoadBalancer.cpp  DLoadBalancer.hpp  D_arm_sve.hpp  D_avx512.hpp  D_multiarch_arm_sve.cpp  D_multiarch_avx512.cpp  Phi0.cpp  (+11 more)
test/: BinaryIndexedTree.cpp  CMakeLists.txt  CPUID.cpp  Li.cpp  LogarithmicIntegral.cpp  P2.cpp  P2_xa.cpp  P3.cpp  P3_xa.cpp  PiTable.cpp  README.md  Ri.cpp  RiemannR.cpp  RiemannR_psi.cpp  Riemann_R.cpp  S1_xy.cpp  S2_easy_xy.cpp  S2_hard_xy.cpp  S2_trivial_xy.cpp  S2_xy.cpp  alpha.cpp  alpha_deleglise_rivat.cpp  alpha_lmo.cpp  alpha_y.cpp  alpha_z.cpp  alpha_z_gourdon.cpp  api.cpp  api_c.c  api_c.cpp  bit_sieve.cpp  calculator.cpp  coprime.cpp  cpuid.cpp  dfactor_table.cpp  factor_table.cpp  factor_table_d.cpp  fast_div.cpp  fast_div_128_64.cpp  generate_lpf.cpp  generate_phi.cpp  (+44 more)
test/api/: CMakeLists.txt  api.cpp  api_c.c  nth_prime.cpp
test/codegen/: CMakeLists.txt  check_conditional_move_codegen.cmake  conditional_move.cmake  conditional_move.cpp
test/codegen/arm/: conditional_move.cmake  conditional_move.cpp
test/codegen/x86/: CMakeLists.txt  conditional_move.cmake  conditional_move.cpp
test/deleglise-rivat/: CMakeLists.txt  S2.cpp  S2_easy.cpp  S2_easy_alpha.cpp  S2_easy_xy.cpp  S2_hard.cpp  S2_hard_alpha.cpp  S2_hard_xy.cpp  S2_trivial.cpp  S2_trivial_alpha.cpp  S2_trivial_xy.cpp  alpha_deleglise_rivat.cpp  pi_deleglise_rivat.cpp
test/gourdon/: AC.cpp  B.cpp  CMakeLists.txt  D.cpp  FactorTableD.cpp  Phi0.cpp  SegmentedPiTable.cpp  Sigma.cpp  alpha_y.cpp  alpha_z.cpp  pi_gourdon.cpp
test/lmo/: BinaryIndexedTree.cpp  CMakeLists.txt  FactorTable.cpp  S1.cpp  S1_alpha.cpp  S1_xy.cpp  alpha_lmo.cpp  pi_lmo1.cpp  pi_lmo2.cpp  pi_lmo3.cpp  pi_lmo4.cpp  pi_lmo5.cpp  pi_lmo_parallel.cpp
(+127 files in other folders)
